<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PhotoSynq</string>
    <string name="action_settings">Settings</string>
    <string name="login_button">Login</string>
    <string name="save_credentials">Save Credentials</string>
    <string name="title_activity_project_list">Research Projects</string>
    <string name="research_project_str">Research Projects</string>
    <string name="quick_measurement_str">Quick Measurement</string>
    <string name="recent_research_collab_str">Recent Research Collaborations</string>
    <string name="calibrate_intru_str">Calibrate Instrument</string>
    <string name="research_near_me_str">Research Near Me</string>
    <string name="title_activity_project_description">Project Details</string>
    <string name="no_data_found">Click to start measurement</string>
    <string name="participate">Participate</string>
    <string name="end_date_lbl">End Date:</string>
    <string name="start_date_lbl">Start Date:</string>
    <string name="beta_lbl">Beta:</string>
    <string name="title_activity_directions">Directions</string>
    <string name="image_desc">Image Description</string>
    <string name="next">Next</string>
    <string name="directions_to_collab">Directions to collaborators</string>
    <string name="title_activity_bluetooth">Bluetooth Devices</string>
    <string name="title_activity_new_measurment">Measurement Details</string>
    <string name="choose_option">Choose Option</string>
    <string name="title_activity_display_results">Results</string>
    <string name="title_activity_result">Measurement Steps</string>
    <string name="title_activity_select_protocol">Protocol List</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>
    <string name="action_different_device">Select Device</string>
    <string name="action_criteria">Direction Details</string>
    <string name="action_protocol_desc">Protocol Details</string>
    <string name="action_back_to_projects">Project List</string>

    <!-- Latitude, longitude format -->
    <string name="latitude_longitude">%1$.8f, %2$.8f</string>
    <string name="resolved">Error resolved. Please re-try operation.</string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="unknown_activity_request_code">        Received an unknown activity request code %1$d in onActivityResult.</string>
    <string name="play_services_available">Google Play services is available</string>
    <string name="refresh">Refresh</string>
    <string name="start_text">Start Text</string>
    <string name="cancel_text">Cancel Text</string>
    <string name="Pro_list_status">Loading....&#8230;</string>
    <string name="error_sending_data">There was a problem saving your data with photosynq server, But your data is safe and we will try to save it again in few minutes.</string>
    <string name="no_internet_connection">No Internet connection.</string>
    <string name="result_discarded">Results discarded.</string>
    <string name="discard">Discard</string>
    <string name="ok">OK</string>
    <string name="data_uploaded_to_server">Your data was successfully uploaded to the photosynq server.</string>
    <string name="keep_data">Keep Data Successfully</string>
    <string name="doodle_alert">doodle_alert</string>
    <string name="connection_error">connection_error</string>
    <string name="doodle_found">doodle_found</string>
    <string name="no_doodle">no_doodle</string>
    <string name="hello_world">Hello world!</string>
    <string name="sync_successful">Sync successful!</string>
    <string name="title_activity_streamlined_mode">Streamlined Mode</string>
    <string name="test">Test</string>
    <string name="title_activity_display_selected_questions_options">DisplaySelectedQuestionsOptionsActivity</string>
    <string name="option_text">Option  :-</string>
    <string name="questionText">Question</string>
    <string name="measure_btn"> MEASURE </string>
    <string name="drawer_title">PhotosynQ</string>
    <string name="clear"></string>
    <string name="streamlined_mode">Streamlined Mode</string>
    <string name="normal_mode">Normal Mode</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="sign_out">Sign Out</string>
    <string name="user_email">test@gmail.com</string>
    <string name="tab_one">Mode</string>
    <string name="tab_two">User</string>
    <string name="tab_three">Connection</string>
    <string name="tab_four">Project</string>
    <string name="tab_five">Data</string>
    <string name="tab_six">Review</string>
    <string name="tab_seven">Sync</string>
    <string name="fragment_my_apps">Fragment my Apps</string>
    <string name="fragment_shop_apps">Fragment Shops App</string>
    <string name="fragment_tab_one">Fragment Tab One</string>
    <string name="fragment_tab_two">Kelvin M.</string>
    <string name="fragment_tab_three">List of paired bluetooth devices</string>
    <string name="title_activity_navigation_main">Navigation Drawer</string>
    <string name="title_activity_fragment_data">Fragment Data</string>
    <string name="sign_out_btn">Sign Out</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="title_activity_tabs_view_pager_fragment">TabsViewPagerFragmentActivity</string>
    <string name="searchNew">Search New</string>
    <string name="change_user">Change User</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="paired">Paired</string>
    <string name="pairDevice">Pair Device</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

</resources>
