<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.photosynq.app.DisplayResultsActivity" >

    <item
        android:id="@+id/action_different_device"
        android:orderInCategory="100"
        android:title="@string/action_different_device"
        app:showAsAction="never"/>
     <item
        android:id="@+id/action_criteria"
        android:orderInCategory="100"
        android:title="@string/action_criteria"
        app:showAsAction="never"/>
      <item
        android:id="@+id/action_protocol_desc"
        android:orderInCategory="100"
        android:title="@string/action_protocol_desc"
        app:showAsAction="never"/>

       <item
        android:id="@+id/action_back_to_projects"
        android:orderInCategory="100"
        android:title="@string/action_back_to_projects"
        app:showAsAction="never"/>
</menu>
