<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical" >

    <!--
         <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_marginRight="6dip"
        android:src="@drawable/simple_leaf" />
    -->

    <LinearLayout
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <Button
            android:id="@+id/research_projects_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="listResearchProjects"
            android:text="@string/research_project_str"
             />

        <Button
            android:id="@+id/recent_research_collab_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="testCreateRecord"
            android:text="@string/recent_research_collab_str" />

        <Button
            android:id="@+id/research_near_me_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="testFetchRecord"
            android:text="@string/research_near_me_str" />

        <Button
            android:id="@+id/calibrate_intru_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="testFetchAllRecord"
            android:text="@string/calibrate_intru_str" />
         <Button
            android:id="@+id/testDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="testDeleteRecord"
            android:text="@string/calibrate_intru_str" />
    </LinearLayout>

</LinearLayout>